--- a/lectures/l1-unsupervised-p1-lsa.ipynb
+++ b/lectures/l1-unsupervised-p1-lsa.ipynb
@@ -1,29 +1,65 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# Part 1: Usupervised learning\n",
+    "\n",
+    "© Anatolii Stehnii, 2018"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/anatolii.stehnii/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%env LC_ALL=en_US.UTF-8\n",
+    "%env LANG=en_US.UTF-8\n",
+    "\n",
     "import numpy as np\n",
     "from scipy import spatial\n",
-    "import nltk"
+    "import nltk\n",
+    "nltk.download(\"wordnet\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 1: Usupervised learning\n",
-    "## Numeric representation\n",
+    "## Numeric representation for words\n",
     "\n",
     "Numerical data naturally have a meaning for computational machine. Numbers can be **compared**, a **distance** between vectors can be measured. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +68,7 @@
        "1.5156862774427124"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +126,7 @@
        "0.66666666666666663"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,20 +159,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meaning\n",
+    "## Meaning\n",
     "Definition of **meaning**:\n",
     " 1. the logical connotation of a word or phrase;\n",
     " 2. what is intended to be, or actually is, expressed or indicated; signification;\n",
     " 3. the thing that is conveyed especially by language.\n",
     " \n",
-    "Meaning of a **natural language** is a complex problem. The same words can have a different meaning in different **contexts**. Different words also can have a similar meaning (**synonyms**). Words with broader meaning can include meaning for more specific categories (**hypernyms and hyponyms**).\n",
+    "Meaning of a **natural language** is a complex problem. The same words can have a different meaning in different contexts (**polysemy**). Different words also can have a similar meaning (**synonymy**). Words with broader meaning can include meaning for more specific categories (**hypernymy and hyponymy**).\n",
     "\n",
     "The simple solution for meaning representation is to manually mark up a graph of relations between words (**WordNet**)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +307,7 @@
        "4"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +325,7 @@
     "Other WordNet features: http://www.nltk.org/howto/wordnet.html\n",
     "\n",
     "WordNet is interesting as a word catalogue, but it has some **major issues**:\n",
-    "1. whole **language complexity** cannot be inferred only from synonymity, hyponymy, and hypernymy relations;\n",
+    "1. whole **language complexity** cannot be inferred only from synonymy, hyponymy, and hypernymy relations;\n",
     "2. WordNet is missing new words, it requires **manual labor** to adapt, and it is prone to **human errors**;\n",
     "3. word similarity is **not accurate**."
    ]
@@ -302,7 +338,7 @@
     "\n",
     "Map words into n-dimensional space, where relations between words will be encoded into **spatial words positions**.\n",
     "\n",
-    "#### Core idea\n",
+    "### Core idea\n",
     "\n",
     "A word’s meaning is given by the words that frequently appear close-by.\n",
     "\n",
@@ -310,13 +346,97 @@
     "\n",
     "**Distributional hypothesis**: linguistic items with similar distributions have similar meanings. https://en.wikipedia.org/wiki/Distributional_semantics\n",
     "\n",
-    "To find a representation of a word $w$ we need to use it's **context**: a set of words, which occured nearby is some window (for example, paragraph)."
+    "To find a representation of a word $w$ we need to use it's **context**: a set of words, which occured nearby is some window (for example, paragraph).\n",
+    "\n",
+    "## Latent semantic analysis\n",
+    "\n",
+    "You can form term-document matrix (TF-IDF, BoW) to describe a words context; it is a sparse matrix $\\textbf{X}$ where terms are rows and documents are columns:\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix} \n",
+    " & \\textbf{d}_j \\\\\n",
+    " & \\downarrow \\\\\n",
+    "\\textbf{t}_i^T \\rightarrow &\n",
+    "\\begin{bmatrix} \n",
+    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{matrix}\n",
+    "$$\n",
+    "\n",
+    "After the matrix formed, any **rank lowering method** (PCA, SVD) can be used to reduce dimensionality and extract main components for terms (or for documents, if you task is to project documents into the linear space):\n",
+    "\n",
+    "$$\n",
+    "\\textbf{X} = \\textbf{U} \\textbf{S} \\textbf{V}^T\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix} \n",
+    " & X & & & U & & \\textbf{S} & & V^T \\\\\n",
+    " & (\\textbf{d}_j) & & & & & & & (\\hat{\\textbf{d}}_j) \\\\\n",
+    " & \\downarrow & & & & & & & \\downarrow \\\\\n",
+    "(\\textbf{t}_i^T) \\rightarrow \n",
+    "&\n",
+    "\\begin{bmatrix}\n",
+    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "=\n",
+    "&\n",
+    "(\\hat{\\textbf{t}}_i^T) \\rightarrow\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_1 \\\\ \\, \\\\ \\,\\end{bmatrix} \n",
+    "\\dots\n",
+    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_l \\\\ \\, \\\\ \\, \\end{bmatrix}\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "\\cdot\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "s_1 & \\dots & 0 \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "0 & \\dots & s_l \\\\\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "\\cdot\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "\\begin{bmatrix} & & \\textbf{v}_1 & & \\end{bmatrix} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\begin{bmatrix} & & \\textbf{v}_l & & \\end{bmatrix}\n",
+    "\\end{bmatrix}\n",
+    "\\end{matrix}\n",
+    "$$\n",
+    "\n",
+    "Components of this decomposition are sorted in order of data variance, explained by them; selecting first $l$ components we can obtain dense representation of each word-vector. You can calculate part of variance explained:\n",
+    "\n",
+    "$$\n",
+    "R^2 = \\frac{\\sum_{i=0}^{l} s_i^2}{\\sum_{j=0}^{n} s_j^2}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. SVD is a linear transformation; therefore, it can not capture non-linear relations between words. \n",
+    "2. Not so efficient as state-of-the-art methods (neural networks for example)."
+   ]
   }
  ],
  "metadata": {
