--- a/labs/d1-l1-lsa.ipynb
+++ b/labs/d1-l1-lsa.ipynb
@@ -322,7 +322,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -356,7 +358,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.sparse.linalg import svds\n",
@@ -366,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_ebeddings = u"
@@ -389,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "words = ['he', 'she', 'king', 'queen']\n",
@@ -420,6 +428,16 @@
     "for c, word in zip(coordinates, words):\n",
     "    plt.text(c[0], c[1], word)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "---\n",
+    "(Optional): Change document window from sentence to 5-gram."
    ]
   },
   {
