--- a/lectures/part1-unsupervised-lecture2-word2vec.ipynb
+++ b/lectures/part1-unsupervised-lecture2-word2vec.ipynb
@@ -29,21 +29,25 @@
    "source": [
     "Deep learning not always used to predict something; **representation of data** which is learned without supervision, also can be valuable (see autoencoders, neural language models etc).\n",
     "\n",
-    "Word2vec exploit this approach by **training a model**, which takes each word and tries to predict all words from it's context.\n",
+    "Word2vec exploit this approach to create word-embeddings from a text corpus. There are two main models to do this:\n",
     "\n",
-    "![Word2vec approach simple](Word2vec_words.png)"
+    "- CBOW: use a word context to predict a word.\n",
+    "![Word2vec CBOW](Word2vec CBOW.png)\n",
+    "\n",
+    "- Skip-gram: use a word predict its context;\n",
+    "![Word2vec skip-gram](Word2vec skip-gram.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's denote:\n",
+    "I will describe skip-gram in details. Let's denote:\n",
     "\n",
     "- $w_t$ – a word at step $t \\in 1..T$, center word;\n",
     "- $n$ – window size;\n",
-    "- $w_{t+i}, i \\in [-n/2, 0) \\cap (0, n/2]$ – a word in a context of $w_t$; \n",
-    "- $\\textbf{P}(w_{t+i}|w_t), $ – conditional probability of word $w_{t+i}$ given $w_t$;\n",
+    "- $w_{t+i}, i \\in [-n/2, 0) \\cap (0, n/2]$ – words in a context of $w_t$; \n",
+    "- $\\textbf{P}(w_{t+i}|w_t), $ – conditional probability of a word $w_{t+i}$ given $w_t$;\n",
     "- $\\theta$ – model parameters (neural network weights).\n",
     "\n",
     "Then likelihood for neural network will be: \n",
@@ -60,7 +64,7 @@
     "\n",
     "$\\textbf{P}(w_{t+i}|w_t; \\theta)$ is a conditional probability, approximated by a neural network. Minimizing $\\textbf{J}(\\theta)$ with respect $\\theta$ we will get neural model, which predicts context of words, and model parameters $\\theta$ will actually be dense representations of words. But what is a function for $\\textbf{P}(w_{t+i}|w_t; \\theta)$?\n",
     "\n",
-    "Let's define two matrices $\\textbf{W}_{in}$ and $\\textbf{W}_{out}$ of size $len(V) \\times m$, where $V$ is our vocabulary and $m$ is a desireable number of dimensions for word embeddings. This matrices will be all our parameters, so $\\theta = {\\textbf{W}_{in}, \\textbf{W}_{out}}$. Each word will have a correspoding row vector in both $\\textbf{W}_{in}$ and $\\textbf{W}_{out}$. Let's denote a center word as $c$ and a context word as $o$, and corresponding word vectors as $v_c$ and $u_o$.\n",
+    "Let's define two matrices $\\textbf{W}_{in}$ and $\\textbf{W}_{out} \\in \\mathbb{R}^{V\\times m}$ where $V$ is a size our vocabulary and $m$ is a desireable number of dimensions for word embeddings. This matrices will be all our parameters, so $\\theta = {\\textbf{W}_{in}, \\textbf{W}_{out}}$. Each word will have a correspoding row vector in both $\\textbf{W}_{in}$ and $\\textbf{W}_{out}$. Let's denote a center word as $c$ and a context word as $o$, and corresponding word vectors as $v_c$ and $u_o$.\n",
     "\n",
     "$$ \n",
     "\\textbf{P}(o|c; \\textbf{W}_{in}, \\textbf{W}_{out}) = \n",
@@ -74,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this formulas it could be pretty incomprehensive how it should work. Let's revise implementation of this formula.\n",
+    "With this formula it is still pretty incomprehensive how it should work. Let's revise implementation of a forward propagation of a skip-gram neural network.\n",
     "\n",
     "![Word2vec implementation](Word2vec_diagram.png)"
    ]
@@ -113,6 +117,7 @@
     "center_word_encoded = np.zeros((vocab_len, ))\n",
     "center_word_encoded[center_word] = 1\n",
     "\n",
+    "# this a skip-gram implementation\n",
     "context_words = [0, 1, 3]\n",
     "context_words_encoded = np.zeros((len(context_words), vocab_len))\n",
     "context_words_encoded[np.arange(len(context_words)), context_words] = 1\n",
@@ -251,14 +256,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "derivative"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After minimization of loss function we will have two word-vector matrices: $\\textbf{W}_{in}$ and $\\textbf{W}_{out}$. We can use one of them or average as word embeddings."
+    "After minimization of loss function we will have two word-vector matrices: $\\textbf{W}_{in}$ and $\\textbf{W}_{out}$. We can use any of them or average value as word embeddings.\n",
+    "\n",
+    "Let's derive a derivative of loss function to perfrom weigths optimization. Notation:\n",
+    "\n",
+    "1. $\\textbf{x}$ - one hot encoded word-vector for a center word $c$.\n",
+    "2. $\\textbf{y}$ - disctribution of probabilities for context words given a center word $c$.\n",
+    "3. $y_o$ - probability of a context word $o$ given a center word $c$, $\\textbf{P}(o|c)$\n",
+    "\n",
+    "$$\n",
+    "\\textbf{v}_c = \\textbf{W}_{in}^T \\cdot \\textbf{x}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\textbf{h} = \\textbf{W}_{out}^T \\cdot \\textbf{v}_c = \\textbf{W}_{out}^T \\cdot \\textbf{W}_{in}^T \\cdot \\textbf{x}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\textbf{y} = softmax(\\textbf{h}) = softmax(\\textbf{W}_{out}^T \\cdot \\textbf{W}_{in}^T \\cdot \\textbf{x})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "J_o = -log(\\textbf{P}(o|c)) = -log(y_o) = -log(softmax(h_o)) = -log\\bigg(\\frac{exp(h_o)}{\\sum_{w \\in V} exp(h_w)}\\bigg) = -h_o + log(\\sum_{w \\in V} exp(h_w))\n",
+    "$$\n",
+    "\n",
+    "$\\textbf{h}$ is a vector $[h_1, h_2, ..., h_V]$. \n",
+    "\n",
+    "$$\n",
+    "h_k = \\textbf{W}_{out}^{(k)T} \\cdot \\textbf{v}_c = \\textbf{W}_{out}^{(k)T} \\cdot \\textbf{W}_{in}^{(c)T} \\cdot \\textbf{x}\n",
+    "$$\n",
+    "\n",
+    "Here $\\textbf{W}_{out}^{(k)T}$ and $\\textbf{W}_{in}^{(c)T}$ is a row vectors of corresponding matrices."
    ]
   },
   {
