--- a/practical/part1-workout3-word2vec.ipynb
+++ b/practical/part1-workout3-word2vec.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Word2vec\n",
     "\n",
-    "In this work you should implement Word2vec and compare it's results with LSA word embeddings.\n",
-    "\n",
-    "Code from [Mateusz Bednarski](https://towardsdatascience.com/implementing-word2vec-in-pytorch-skip-gram-model-e6bae040d2fb) article is used."
+    "In this work you should implement Word2vec and compare it's results with LSA word embeddings."
    ]
   },
   {
@@ -69,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_dir = \"../data/part1\"\n",
@@ -80,16 +80,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "vocabulary = {}\n",
-    "with open(vocabulary_file) as f:\n",
-    "    vocabulary = {w.strip():i for i, w in enumerate(f.readlines())}\n",
-    "\n",
-    "corpus = []\n",
-    "with open(corpus_file) as f:\n",
-    "    corpus = [[int(w) for w in document.strip().split()] for document in f.readlines()]"
+    "vocabulary = None  # your code here\n",
+    "corpus = None  # your code here"
    ]
   },
   {
@@ -172,17 +169,8 @@
    "source": [
     "window_size = 2\n",
     "pairs = []\n",
-    "# for each document\n",
-    "for document in tqdm_notebook(corpus):\n",
-    "    # for each word, threated as center word\n",
-    "    for center_word_pos in range(len(document)):\n",
-    "        # for each window position\n",
-    "        for w in range(-window_size, window_size + 1):\n",
-    "            context_word_pos = center_word_pos + w\n",
-    "            # make soure not jump out sentence\n",
-    "            if context_word_pos < 0 or context_word_pos >= len(document) or center_word_pos == context_word_pos:\n",
-    "                continue\n",
-    "            pairs.append((document[center_word_pos], document[context_word_pos]))\n",
+    "\n",
+    "# your code here\n",
     "\n",
     "pairs = torch.tensor(pairs)"
    ]
@@ -234,15 +222,10 @@
     "class Word2vecModule(nn.Module):\n",
     "    def __init__(self, vocabulary_length, embedding_dim):\n",
     "        super(Word2vecModule, self).__init__()\n",
-    "        self.W_in = nn.Embedding(vocabulary_length, embedding_dim)\n",
-    "        self.W_out = nn.Linear(embedding_dim, vocabulary_length, bias=False)\n",
-    "        self.cross_entropy = nn.CrossEntropyLoss()\n",
+    "        pass # your code here\n",
     "        \n",
     "    def forward(self, x, y):\n",
-    "        h = self.W_in(x)\n",
-    "        u = self.W_out(h)\n",
-    "        loss = self.cross_entropy(u, y)\n",
-    "        return loss"
+    "        pass # your code here"
    ]
   },
   {
@@ -255,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_embedding = 200\n",
@@ -266,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# shuffle training indices\n",
@@ -288,45 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71d993cfa1d4466e9330daa4078c0793",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-5:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/anatolii.stehnii/anaconda3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/Users/anatolii.stehnii/anaconda3/lib/python3.6/site-packages/tqdm/_tqdm.py\", line 144, in run\n",
-      "    for instance in self.tqdm_cls._instances:\n",
-      "  File \"/Users/anatolii.stehnii/anaconda3/lib/python3.6/_weakrefset.py\", line 60, in __iter__\n",
-      "    for itemref in self.data:\n",
-      "RuntimeError: Set changed size during iteration\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(100):\n",
     "    description = 'Training epoch {}'.format(epoch+1)\n",
@@ -342,13 +291,6 @@
     "    \n",
     "    print('Epoch finished, average loss: {0:.4f}'.format(total_loss/batches))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": []
   }
  ],
  "metadata": {
