--- a/lectures/part1-unsupervised-lecture1-lsa.ipynb
+++ b/lectures/part1-unsupervised-lecture1-lsa.ipynb
@@ -52,6 +52,151 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunss.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsx.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsi.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunso.otf');\n",
+       "    }\n",
+       "    div.cell{\n",
+       "        width:800px;\n",
+       "        margin-left:16% !important;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    h1 {\n",
+       "        font-family: Helvetica, serif;\n",
+       "    }\n",
+       "    h4{\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "       }\n",
+       "    div.text_cell_render{\n",
+       "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 145%;\n",
+       "        font-size: 130%;\n",
+       "        width:800px;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .prompt{\n",
+       "        display: None;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h4 {\n",
+       "        text-decoration: ;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 22pt;\n",
+       "        color: #4057A1;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    \n",
+       "    .warning {\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "    }\n",
+       "\n",
+       "    div.warn {\n",
+       "        background-color: #fcf2f2;\n",
+       "        border-color: #dFb5b4;\n",
+       "        border-left: 5px solid #dfb5b4;\n",
+       "        padding: 0.5em;\n",
+       "    }\n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "MathJax.Hub.Queue(\n",
+       "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+       "  [\"PreProcess\", MathJax.Hub],\n",
+       "  [\"Reprocess\", MathJax.Hub]\n",
+       ");"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "MathJax.Hub.Queue(\n",
+    "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+    "  [\"PreProcess\", MathJax.Hub],\n",
+    "  [\"Reprocess\", MathJax.Hub]\n",
+    ");"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -400,77 +545,77 @@
     "\n",
     "1. Form a term-document matrix (TF-IDF, BoW) to describe a words context; it is a sparse matrix $\\textbf{X}$ where terms are rows and documents are columns:\n",
     "\n",
-    "    $$\n",
-    "    \\begin{matrix} \n",
-    "     & \\textbf{d}_j \\\\\n",
-    "     & \\downarrow \\\\\n",
-    "    \\textbf{t}_i^T \\rightarrow &\n",
-    "    \\begin{bmatrix} \n",
-    "    x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
-    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "    x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
-    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "    x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
-    "    \\end{bmatrix}\n",
-    "    \\end{matrix}\n",
-    "    $$\n",
+    "\\begin{equation}\n",
+    "\\begin{matrix} \n",
+    " & \\textbf{d}_j \\\\\n",
+    " & \\downarrow \\\\\n",
+    "\\textbf{t}_i^T \\rightarrow &\n",
+    "\\begin{bmatrix} \n",
+    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{matrix}\n",
+    "\\end{equation}\n",
     "\n",
     "2. Apply **rank lowering method** (SVD) to it to reduce dimensionality and extract main components for terms (or for documents, if your task is to find vector representations for documents):\n",
     "\n",
-    "    $$\n",
-    "    \\textbf{X} = \\textbf{U} \\textbf{S} \\textbf{V}^T\n",
-    "    $$\n",
+    "\\begin{equation}\n",
+    "\\textbf{X} = \\textbf{U} \\textbf{S} \\textbf{V}^T\n",
+    "\\end{equation}\n",
     "\n",
-    "    $$\n",
-    "    \\begin{matrix} \n",
-    "     & X & & & U & & \\textbf{S} & & V^T \\\\\n",
-    "     & (\\textbf{d}_j) & & & & & & & (\\hat{\\textbf{d}}_j) \\\\\n",
-    "     & \\downarrow & & & & & & & \\downarrow \\\\\n",
-    "    (\\textbf{t}_i^T) \\rightarrow \n",
-    "    &\n",
-    "    \\begin{bmatrix}\n",
-    "    x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
-    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "    x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
-    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "    x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
-    "    \\end{bmatrix}\n",
-    "    &\n",
-    "    =\n",
-    "    &\n",
-    "    (\\hat{\\textbf{t}}_i^T) \\rightarrow\n",
-    "    &\n",
-    "    \\begin{bmatrix} \n",
-    "    \\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_1 \\\\ \\, \\\\ \\,\\end{bmatrix} \n",
-    "    \\dots\n",
-    "    \\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_l \\\\ \\, \\\\ \\, \\end{bmatrix}\n",
-    "    \\end{bmatrix}\n",
-    "    &\n",
-    "    \\cdot\n",
-    "    &\n",
-    "    \\begin{bmatrix} \n",
-    "    s_1 & \\dots & 0 \\\\\n",
-    "    \\vdots & \\ddots & \\vdots \\\\\n",
-    "    0 & \\dots & s_l \\\\\n",
-    "    \\end{bmatrix}\n",
-    "    &\n",
-    "    \\cdot\n",
-    "    &\n",
-    "    \\begin{bmatrix} \n",
-    "    \\begin{bmatrix} & & \\textbf{v}_1 & & \\end{bmatrix} \\\\\n",
-    "    \\vdots \\\\\n",
-    "    \\begin{bmatrix} & & \\textbf{v}_l & & \\end{bmatrix}\n",
-    "    \\end{bmatrix}\n",
-    "    \\end{matrix}\n",
-    "    $$\n",
+    "\\begin{equation}\n",
+    "\\begin{matrix} \n",
+    " & X & & & U & & \\textbf{S} & & V^T \\\\\n",
+    " & (\\textbf{d}_j) & & & & & & & (\\hat{\\textbf{d}}_j) \\\\\n",
+    " & \\downarrow & & & & & & & \\downarrow \\\\\n",
+    "(\\textbf{t}_i^T) \\rightarrow \n",
+    "&\n",
+    "\\begin{bmatrix}\n",
+    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "=\n",
+    "&\n",
+    "(\\hat{\\textbf{t}}_i^T) \\rightarrow\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_1 \\\\ \\, \\\\ \\,\\end{bmatrix} \n",
+    "\\dots\n",
+    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_l \\\\ \\, \\\\ \\, \\end{bmatrix}\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "\\cdot\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "s_1 & \\dots & 0 \\\\\n",
+    "\\vdots & \\ddots & \\vdots \\\\\n",
+    "0 & \\dots & s_l \\\\\n",
+    "\\end{bmatrix}\n",
+    "&\n",
+    "\\cdot\n",
+    "&\n",
+    "\\begin{bmatrix} \n",
+    "\\begin{bmatrix} & & \\textbf{v}_1 & & \\end{bmatrix} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\begin{bmatrix} & & \\textbf{v}_l & & \\end{bmatrix}\n",
+    "\\end{bmatrix}\n",
+    "\\end{matrix}\n",
+    "\\end{equation}\n",
     "\n",
     "3. Columns of $\\textbf{U}$ are linear independent factors of word vectors; singular values $\\textbf{s}_n$ can be used to order these factors from more influential to less influential. Select first $\\textbf{l}$ components to obtain $\\textbf{l}$-dimensional dense representation for each word-vector. \n",
     "\n",
     "4. Calculate part of variance explained by your representation:\n",
     "\n",
-    "    $$\n",
-    "    R^2 = \\frac{\\sum_{i=0}^{l} \\textbf{s}_i^2}{\\sum_{j=0}^{n} \\textbf{s}_j^2}\n",
-    "    $$\n",
+    "\\begin{equation}\n",
+    "R^2 = \\frac{\\sum_{i=0}^{l} \\textbf{s}_i^2}{\\sum_{j=0}^{n} \\textbf{s}_j^2}\n",
+    "\\end{equation}\n",
     "\n",
     "5. PROFIT!"
    ]
