--- a/lectures/part1-unsupervised-lecture1-lsa.ipynb
+++ b/lectures/part1-unsupervised-lecture1-lsa.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But this can not be easy done for **words**:"
+    "But this can not be done for **words**:"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Words are **discreete symbols** and can be encoded as **one-hot-vector**, sentences can be encoded as a **bag of words**:"
+    "Words are **discrete symbols** which can be encoded as **one-hot-vectors**, sentences can be encoded as **bags of words**:"
    ]
   },
   {
@@ -314,7 +314,7 @@
     " 2. what is intended to be, or actually is, expressed or indicated; signification;\n",
     " 3. the thing that is conveyed especially by language.\n",
     " \n",
-    "Meaning of a **natural language** is a complex problem. The same words can have a different meaning in different contexts (**polysemy**). Different words also can have a similar meaning (**synonymy**). Words with broader meaning can include meaning for more specific categories (**hypernymy and hyponymy**).\n",
+    "Representation of meaning for a **natural language** is a complex problem. The same words can have a different meaning in different contexts (**polysemy**). Different words also can have a similar meaning (**synonymy**). Words with broader meaning can include meaning for more specific categories (**hypernymy and hyponymy**).\n",
     "\n",
     "### WordNet\n",
     "\n",
@@ -519,7 +519,7 @@
    "source": [
     "Other WordNet features: http://www.nltk.org/howto/wordnet.html\n",
     "\n",
-    "WordNet is interesting as a word catalogue, but it has some **major issues**:\n",
+    "WordNet is interesting as a word catalog, but it has some **major issues**:\n",
     "1. whole **language complexity** cannot be inferred only from synonymy, hyponymy, and hypernymy relations;\n",
     "2. WordNet is missing new words, it requires **manual labor** to adapt, and it is prone to **human errors**;\n",
     "3. word similarity is **not accurate**."
@@ -529,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solution is to map words into $n$-dimensional space, where relations between words will be encoded into **spatial words positions**.\n",
+    "A possible solution is to map words into $n$-dimensional space, where relations between words will be encoded into **spatial words positions**.\n",
     "\n",
     "### LSA core idea\n",
     "\n",
@@ -539,83 +539,83 @@
     "\n",
     "**Distributional hypothesis**: linguistic items with similar distributions have similar meanings. https://en.wikipedia.org/wiki/Distributional_semantics\n",
     "\n",
-    "To find a representation of a word $w$ we need to use it's **context**: a set of words, which occured nearby is some window (for example, paragraph).\n",
+    "To find a representation of a word $w$ we need to use it's **context**: a set of words, which occurred nearby is some window (for example, paragraph).\n",
     "\n",
     "### LSA algorithm\n",
     "\n",
     "1. Form a term-document matrix (TF-IDF, BoW) to describe a words context; it is a sparse matrix $\\textbf{X}$ where terms are rows and documents are columns:\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\begin{matrix} \n",
-    " & \\textbf{d}_j \\\\\n",
-    " & \\downarrow \\\\\n",
-    "\\textbf{t}_i^T \\rightarrow &\n",
-    "\\begin{bmatrix} \n",
-    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
-    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
-    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
-    "\\end{bmatrix}\n",
-    "\\end{matrix}\n",
-    "\\end{equation}\n",
+    "    \\begin{equation}\n",
+    "    \\begin{matrix} \n",
+    "     & \\textbf{d}_j \\\\\n",
+    "     & \\downarrow \\\\\n",
+    "    \\textbf{t}_i^T \\rightarrow &\n",
+    "    \\begin{bmatrix} \n",
+    "    x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "    x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "    x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\end{matrix}\n",
+    "    \\end{equation}\n",
     "\n",
     "2. Apply **rank lowering method** (SVD) to it to reduce dimensionality and extract main components for terms (or for documents, if your task is to find vector representations for documents):\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\textbf{X} = \\textbf{U} \\textbf{S} \\textbf{V}^T\n",
-    "\\end{equation}\n",
+    "    \\begin{equation}\n",
+    "    \\textbf{X} = \\textbf{U} \\textbf{S} \\textbf{V}^T\n",
+    "    \\end{equation}\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\begin{matrix} \n",
-    " & X & & & U & & \\textbf{S} & & V^T \\\\\n",
-    " & (\\textbf{d}_j) & & & & & & & (\\hat{\\textbf{d}}_j) \\\\\n",
-    " & \\downarrow & & & & & & & \\downarrow \\\\\n",
-    "(\\textbf{t}_i^T) \\rightarrow \n",
-    "&\n",
-    "\\begin{bmatrix}\n",
-    "x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
-    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
-    "\\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
-    "x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
-    "\\end{bmatrix}\n",
-    "&\n",
-    "=\n",
-    "&\n",
-    "(\\hat{\\textbf{t}}_i^T) \\rightarrow\n",
-    "&\n",
-    "\\begin{bmatrix} \n",
-    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_1 \\\\ \\, \\\\ \\,\\end{bmatrix} \n",
-    "\\dots\n",
-    "\\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_l \\\\ \\, \\\\ \\, \\end{bmatrix}\n",
-    "\\end{bmatrix}\n",
-    "&\n",
-    "\\cdot\n",
-    "&\n",
-    "\\begin{bmatrix} \n",
-    "s_1 & \\dots & 0 \\\\\n",
-    "\\vdots & \\ddots & \\vdots \\\\\n",
-    "0 & \\dots & s_l \\\\\n",
-    "\\end{bmatrix}\n",
-    "&\n",
-    "\\cdot\n",
-    "&\n",
-    "\\begin{bmatrix} \n",
-    "\\begin{bmatrix} & & \\textbf{v}_1 & & \\end{bmatrix} \\\\\n",
-    "\\vdots \\\\\n",
-    "\\begin{bmatrix} & & \\textbf{v}_l & & \\end{bmatrix}\n",
-    "\\end{bmatrix}\n",
-    "\\end{matrix}\n",
-    "\\end{equation}\n",
+    "    \\begin{equation}\n",
+    "    \\begin{matrix} \n",
+    "     & X & & & U & & \\textbf{S} & & V^T \\\\\n",
+    "     & (\\textbf{d}_j) & & & & & & & (\\hat{\\textbf{d}}_j) \\\\\n",
+    "     & \\downarrow & & & & & & & \\downarrow \\\\\n",
+    "    (\\textbf{t}_i^T) \\rightarrow \n",
+    "    &\n",
+    "    \\begin{bmatrix}\n",
+    "    x_{1,1} & \\dots & x_{1,j} & \\dots & x_{1,n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "    x_{i,1} & \\dots & x_{i,j} &  \\dots & x_{i,n} \\\\\n",
+    "    \\vdots & \\ddots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "    x_{m,1} & \\dots & x_{m,j} & \\dots & x_{m,n} \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    &\n",
+    "    =\n",
+    "    &\n",
+    "    (\\hat{\\textbf{t}}_i^T) \\rightarrow\n",
+    "    &\n",
+    "    \\begin{bmatrix} \n",
+    "    \\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_1 \\\\ \\, \\\\ \\,\\end{bmatrix} \n",
+    "    \\dots\n",
+    "    \\begin{bmatrix} \\, \\\\ \\, \\\\ \\textbf{u}_l \\\\ \\, \\\\ \\, \\end{bmatrix}\n",
+    "    \\end{bmatrix}\n",
+    "    &\n",
+    "    \\cdot\n",
+    "    &\n",
+    "    \\begin{bmatrix} \n",
+    "    s_1 & \\dots & 0 \\\\\n",
+    "    \\vdots & \\ddots & \\vdots \\\\\n",
+    "    0 & \\dots & s_l \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    &\n",
+    "    \\cdot\n",
+    "    &\n",
+    "    \\begin{bmatrix} \n",
+    "    \\begin{bmatrix} & & \\textbf{v}_1 & & \\end{bmatrix} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\begin{bmatrix} & & \\textbf{v}_l & & \\end{bmatrix}\n",
+    "    \\end{bmatrix}\n",
+    "    \\end{matrix}\n",
+    "    \\end{equation}\n",
     "\n",
     "3. Columns of $\\textbf{U}$ are linear independent factors of word vectors; singular values $\\textbf{s}_n$ can be used to order these factors from more influential to less influential. Select first $\\textbf{l}$ components to obtain $\\textbf{l}$-dimensional dense representation for each word-vector. \n",
     "\n",
     "4. Calculate part of variance explained by your representation:\n",
     "\n",
-    "\\begin{equation}\n",
-    "R^2 = \\frac{\\sum_{i=0}^{l} \\textbf{s}_i^2}{\\sum_{j=0}^{n} \\textbf{s}_j^2}\n",
-    "\\end{equation}\n",
+    "    \\begin{equation}\n",
+    "    R^2 = \\frac{\\sum_{i=0}^{l} \\textbf{s}_i^2}{\\sum_{j=0}^{n} \\textbf{s}_j^2}\n",
+    "    \\end{equation}\n",
     "\n",
     "5. PROFIT!"
    ]
@@ -624,13 +624,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problems"
+    "### Pros"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. SVD is simple and fast.\n",
+    "2. This method also can be used to find embeddings not only for words, but also for documents, movies, songs, etc (Collaborative filtering, Entity Embeddings)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cons\n",
     "1. SVD is a linear transformation; therefore, it can not capture non-linear relations between words. \n",
     "2. Not so efficient as state-of-the-art methods (neural networks for example)."
    ]
