--- a/lectures/part1-unsupervised-lecture3-other-approaches.ipynb
+++ b/lectures/part1-unsupervised-lecture3-other-approaches.ipynb
@@ -12,10 +12,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunss.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsx.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunsi.otf');\n",
+       "    }\n",
+       "    @font-face {\n",
+       "        font-family: \"Computer Modern\";\n",
+       "        font-weight: bold;\n",
+       "        font-style: oblique;\n",
+       "        src: url('http://9dbb143991406a7c655e-aa5fcb0a5a4ec34cff238a2d56ca4144.r56.cf5.rackcdn.com/cmunso.otf');\n",
+       "    }\n",
+       "    div.cell{\n",
+       "        width:800px;\n",
+       "        margin-left:16% !important;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    h1 {\n",
+       "        font-family: Helvetica, serif;\n",
+       "    }\n",
+       "    h4{\n",
+       "        margin-top:12px;\n",
+       "        margin-bottom: 3px;\n",
+       "       }\n",
+       "    div.text_cell_render{\n",
+       "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
+       "        line-height: 145%;\n",
+       "        font-size: 130%;\n",
+       "        width:800px;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .prompt{\n",
+       "        display: None;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h4 {\n",
+       "        text-decoration: ;\n",
+       "    }\n",
+       "\n",
+       "    .text_cell_render h5 {\n",
+       "        font-weight: 300;\n",
+       "        font-size: 22pt;\n",
+       "        color: #4057A1;\n",
+       "        font-style: italic;\n",
+       "        margin-bottom: .5em;\n",
+       "        margin-top: 0.5em;\n",
+       "        display: block;\n",
+       "    }\n",
+       "    \n",
+       "    .warning {\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "    }\n",
+       "\n",
+       "    div.warn {\n",
+       "        background-color: #fcf2f2;\n",
+       "        border-color: #dFb5b4;\n",
+       "        border-left: 5px solid #dfb5b4;\n",
+       "        padding: 0.5em;\n",
+       "    }\n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"../custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Word2vec is a classical example of how deep learning can be used to find word embeddings. However, for practical usage you can consider more novel and sophisticated approaches. In this lecture I will give an overview of them."
+    "Word2vec is a classical example of how deep learning can be used to find word embeddings. However, for practical usage you can consider more novel and sophisticated methods. In this lecture I will give an overview of possible approaches."
    ]
   },
   {
@@ -24,10 +138,10 @@
    "source": [
     "### Gensim word2vec implementation\n",
     "\n",
-    "First of all, you probably shall not invent a bicycle and write your own word2vec for a practical task. Gensim already did this for you. \n",
+    "First of all, you probably shall not invent a bicycle and write your own word2vec for a practical task. Gensim already did this for you.\n",
     "\n",
-    "This model also contains useful tools, like finding most similar word given positive and negative words:\n",
-    "```\n",
+    "Besides fast and accurate implementation of Word2vec, their model also  contains useful tools, like finding most similar word given positive and negative words:\n",
+    "```python\n",
     ">>> model.wv.most_similar(positive=['woman', 'king'], negative=['man'])\n",
     "[('queen', 0.50882536), ...]\n",
     "```\n",
@@ -124,7 +238,9 @@
    "source": [
     "### Further reading\n",
     "\n",
-    "1. Sebastian Ruder's [article](http://ruder.io/word-embeddings-2017/)."
+    "0. Yet Another [Article](https://www.shanelynn.ie/get-busy-with-word-embeddings-introduction/) about word embeddings and word2vec.\n",
+    "1. Sebastian Ruder's [article](http://ruder.io/word-embeddings-2017/) about recent advances in word embeddings.\n",
+    "2. Wordeful [article](https://medium.com/@madrugado/advances-in-nlp-in-2017-part-ii-d8da391a3f01) of Valentin Malykh about other unsupervised methods used in NLP.\n"
    ]
   }
  ],
