--- a/lectures/part3-lecture2-attention.ipynb
+++ b/lectures/part3-lecture2-attention.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,13 +276,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Read more\n",
+    "\n",
+    "Great visualization of attention on [Distill.pub](https://distill.pub/2016/augmented-rnns/).\n",
+    "\n",
+    "[Visual attention with TensorFlow](http://akosiorek.github.io/ml/2017/10/14/visual-attention.html)"
+   ]
   }
  ],
  "metadata": {
