--- a/lectures/part3-lecture1-neural-machine-translation.ipynb
+++ b/lectures/part3-lecture1-neural-machine-translation.ipynb
@@ -285,7 +285,7 @@
     "log p(\\textbf{y}|\\textbf{x}) = \\sum_{i=1}^{t} log p(y_i|y_{<i}, \\textbf{x})\n",
     "\\end{equation}\n",
     "\n",
-    "During infering, each decoder input is its previous output. To simplify training process, you can use train target example as decoder input. This is called **teacher forcing**. But this approach results in slightly different distibutions output during training and during inference. **Professor forcing** approach ([Goyal et al, 2016](http://papers.nips.cc/paper/6098-professor-forcing-a-new-algorithm-for-training-recurrent-networks)) proposes to use additional adversarial network, which is trained to distinguish distributions obtained during network training with **teacher forcing** and distributions obtained during infering without ground truth."
+    "During infering, each decoder input is its previous output. To simplify training process, you can use train target example as decoder input. This is called **teacher forcing**. But this approach results in slightly different distibutions output during training and during inference (exposure bias). **Professor forcing** approach ([Goyal et al, 2016](http://papers.nips.cc/paper/6098-professor-forcing-a-new-algorithm-for-training-recurrent-networks)) proposes to use additional adversarial network, which is trained to distinguish distributions obtained during network training with **teacher forcing** and distributions obtained during infering without ground truth."
    ]
   },
   {
