--- a/practical/part1-workout3-word2vec.ipynb
+++ b/practical/part1-workout3-word2vec.ipynb
@@ -152,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "window_size = 2\n",
@@ -263,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# shuffle training indices\n",
